--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+* {
+    margin: 0 auto;
+    box-sizing: border-box;
+    background-color: rgb(213, 213, 213);
+    text-align: center;
+    
+}
